# Training_C-_Repo

./: README.md  Utility.cpp  VWArteon.h  VWPassat.h  main.cpp
Task1/: Automobil.cpp  Automobil.h  Utility.h  VWArteon.cpp  VWPassat.cpp
Task10/: AudiAccessoriesFactory.cpp  AudiAdaptiveHeadlights.cpp  CMakeLists.txt
Task10/include/: AdaptiveHeadlights.h  AudiAdaptiveHeadlights.h  CarAccessoriesFactory.h  PanoramicRoof.h  VWAccessoriesFactory.h
Task10/src/: AbstractFactory.cpp  VWAccessoriesFactory.cpp  VWPanoramicRoof.cpp
Task2/: SmartPointers.cpp
Task3/Factory/: Factory.cpp
Task3/Singleton/: Singleton.cpp
Task4/: ThreadSync.txt  multithreading.cpp  sharedCarInfo.cpp
Task5/Shared_memory/: Client  Client.cpp  Server  Server.cpp  client_output.txt  server_output.txt
Task5/Sockets/: Client  Server  Server.cpp  client_output.txt
Task5/Sockets/Old/: Client.cpp  Server.cpp
Task6/: multithreading.cpp
Task7/: Client.cpp  Server.cpp  bash_script.sh
Task8/: CMakeLists.txt  Factory.cpp  Factory_test  Factory_test.cpp
Task9/: AbstractFactory.cpp  AudiAccessoriesFactory.h  VWPanoramicRoof.h
